displayed categories via API

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <p class="main-caption">WHAT WILL YOU LIKE TO EAT ?</p>
         </div>
 
-        <div class="card-group">
+        <div id="cards-category" class="card-group">
           <!-- CARD 1 -->
           <div id="card-category-1" class="card card-active" onclick="app.gotoBundlePage('1',6)">
             <div class="card-content">
