added bundles list

--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
           <p class="main-caption"> SELECT A BUNDLE</p>
         </div>
 
-        <div class="card-group">
+        <div id="cards-bundle" class="card-group">
           <!-- CARD 1 -->
-          <div id="card-bundle-1" class="card card-active" onclick="app.showModalBundleDetail('1',6)">
+          <!-- <div id="card-bundle-1" class="card card-active" onclick="app.showModalBundleDetail('1',6)">
             <div class="card-content">
               <img class="card-image" src="assets/image/fastfood.png">
               <div class="card-caption">
@@ -169,72 +169,8 @@
             </div>
             <div class="card-background">
             </div>
-          </div>
+          </div> -->
 
-          <!-- CARD 2 -->
-          <div id="card-bundle-2" class="card" onclick="app.showModalBundleDetail('2',6)">
-            <div class="card-content">
-              <img class="card-image" src="assets/image/oriental.png">
-              <div class="card-caption">
-                <p class="card-bundle-title">Bundle title 2</p>
-              </div>
-            </div>
-            <div class="card-background">
-            </div>
-          </div>
-
-          <!-- CARD 3 -->
-          <div id="card-bundle-3" class="card" onclick="app.showModalBundleDetail('3',6)">
-            <div class="card-content">
-              <img class="card-image" src="assets/image/continental.png">
-              <div class="card-caption">
-                <p class="card-bundle-title">Bundle title 8</p>
-              </div>
-            </div>
-            <div class="card-background">
-            </div>
-          </div>
-        </div>
-
-        <!-- SECOND CARD GRID -->
-        <div class="card-group">
-          <!-- CARD 4 -->
-          <div id="card-bundle-4" class="card" onclick="app.showModalBundleDetail('4',6)">
-            <div class="card-content">
-              <img class="card-image" src="assets/image/african.png">
-              <div class="card-caption">
-                <p class="card-bundle-title">Bundle title 10</p>
-              </div>
-            </div>
-            <div class="card-background">
-            </div>
-          </div>
-
-          <!-- CARD 5 -->
-          <div id="card-bundle-5" class="card" onclick="app.showModalBundleDetail('5',6)">
-            <div class="card-content">
-              <img class="card-image" src="assets/image/bukka.png">
-              <div class="card-caption">
-                <p class="card-bundle-title">Bundle title 5</p>
-                <!-- <p class="card-description">Lorem ipsum dolor sit amet, consectetur</p> -->
-              </div>
-            </div>
-            <div class="card-background">
-            </div>
-          </div>
-
-          <!-- CARD 6 -->
-          <div id="card-bundle-6" class="card" onclick="app.showModalBundleDetail('6', 6)">
-            <div class="card-content">
-              <img class="card-image" src="assets/image/healthyfood.png">
-              <div class="card-caption">
-                <p class="card-bundle-title">Bundle title 12</p>
-                <!-- <p class="card-description">Lorem ipsum dolor sit amet, consectetur</p> -->
-              </div>
-            </div>
-            <div class="card-background">
-            </div>
-          </div>
         </div>
 
         <!-- BASKET -->
