added company info to bundles page

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               </div>
               <hr>
               <div class="basket-total-row basket-total-row-total">
-                <span>Total Bundle</span>
+                <span>Total</span>
                 <p><span class="currency">NGN</span><span id="grandTotal">00</span><span class="currency">.00</span></p>
               </div>
             </div>
@@ -130,8 +130,8 @@
               <img src="assets/image/back.png">
             </div>
             <div class="location-details">
-              <p class="main-title">Company Name</p>
-              <p class="main-subtitle">Location</p>
+              <p id="bundleLocationName" class="main-title">Company Name</p>
+              <p id="bundleLocationCity" class="main-subtitle">Location</p>
             </div>
           </div>
           <p class="main-caption"> SELECT A BUNDLE</p>
@@ -171,17 +171,17 @@
             <div>
               <div class="basket-total-row">
                 <span>Total Bundle</span>
-                <p><span class="currency">NGN</span>26,905.<span class="currency">00</span></p>
+                <p><span class="currency">NGN</span><span id="totalBasketBundle">00</span><span class="currency">.00</span></p>
               </div>
               <!-- <div class="basket-total-row"></div> -->
               <div class="basket-total-row">
                 <span>Delivery</span>
-                <p><span class="currency">NGN</span>600.<span class="currency">00</span></p>
+                <p><span class="currency">NGN</span><span id="deliveryCost">600</span><span class="currency">.00</span></p>
               </div>
               <hr>
               <div class="basket-total-row basket-total-row-total">
-                <span>Total Bundle</span>
-                <p><span class="currency">NGN</span>27,505.<span class="currency">00</span></p>
+                <span>Total</span>
+                <p><span class="currency">NGN</span><span id="grandTotal">00</span><span class="currency">.00</span></p>
               </div>
             </div>
 
