--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <th>QUANTITY</th>
               </tr>
             </thead>
-            <tbody id="basketTable">
+            <tbody id="bundleBasketTable">
             </tbody>
             </table>
           </div>
