added effect when added to basket

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         <div id="cards-category" class="card-group"></div>
 
         <!-- BASKET -->
-        <div class="basket">
-          <div class="basket-table">
+        <div id="basket" class="basket">
+          <div id="basket-table" class="basket-table animate-basket-background">
             <table>
               <thead>
               <tr>
@@ -153,14 +153,15 @@
         </div>
 
         <!-- BASKET -->
-        <div class="basket">
-          <div class="basket-table">
+        <div id="basket" class="basket">
+          <div id="basket-table" class="basket-table animate-basket-background">
             <table>
               <thead>
               <tr>
                 <th>BUNDLE NAME</th>
                 <th>UNIT PRICE</th>
                 <th>QUANTITY</th>
+                <th></th>
               </tr>
             </thead>
             <tbody id="bundleBasketTable">
