fixed unintended bundle animation

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
         <!-- BASKET -->
         <div id="basket" class="basket">
-          <div id="basket-table" class="basket-table animate-basket-background">
+          <div id="bundle-basket-table" class="basket-table animate-basket-background">
             <table>
               <thead>
               <tr>
@@ -192,6 +192,12 @@
           </div>
         </div>
       </div>
+    </div>
+
+<!-- LAST VIEW FOR WHEN VIEWS IS LOADING -->
+<div class="view" data-statusbar="white" >
+  <div class="setup-main-content">
+</div>
     </div>
 
     <!-- MODAL - BUNDLE DETAIL -->
