--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <img id="chicken" class="setup-preloader" src="assets/image/chicken.png">
           <img id="pizza" class="setup-preloader" src="assets/image/pizza.png">
         </div>
-        <p> checking for config file ...</p>
+        <p class="setup-message"> checking for config file ...</p>
         <button class="setup-button" onclick="app.gotoSetupPage()">SETUP THIS DEVICE</button>
       </div>
     </div>
@@ -118,6 +118,17 @@
               PROCEED TO CHECKOUT
             </button>
           </div>
+        </div>
+        <div class="logo-grid">
+          <img class="footer-logo" src="assets/image/335-restaurant.png">
+          <img class="footer-logo" src="assets/image/411-restaurant.jpg">
+          <img class="footer-logo" src="assets/image/diet-munchers.jpg">
+          <img class="footer-logo" src="assets/image/grindgrillcafe.png">
+          <img class="footer-logo" src="assets/image/kmac.png">
+          <img class="footer-logo" src="assets/image/papas-grill.png">
+          <img class="footer-logo" src="assets/image/pattaya.jpg">
+          <img class="footer-logo" src="assets/image/simply-green.jpg">
+          <img class="footer-logo" src="assets/image/the-place.png">
         </div>
       </div>
     </div>
